# turbo-octo-pancake-CG-course-project-

./: .gitignore  ScreenCamera_2025-05-31-22-05-26.json  model.stl  notebook.ipynb  sphere.stl  КР ТЗ.docx
code/: Cargo.toml
code/benches/: morph_benchmark.rs
code/scripts/: draw_barplot.py  process_and_plot.py
code/src/: app.rs  config.rs  dcel.rs  input_handlers.rs  lib.rs  main.rs  scene.rs  ui.rs
code/src/app/: input.rs  mod.rs  state.rs  ui.rs
code/src/objects/: camera.rs  light.rs  mod.rs  model3d.rs  morph.rs  triangle_mesh.rs
code/src/render/: mod.rs  transparency.rs  wireframe_drawer.rs  z_buffer.rs
code/src/utils/: dcel.rs  math.rs  mod.rs  morphing.rs  triangles.rs
docs/: title.docx
docs/graphs/: bulid_supermesh.graphml  control_graph_nonrecursive.graphml  normals_relocation.graphml  parametriztion.graphml  relaxation.graphml  unnamed2.graphml  vertex_relocation.graphml  z-buff.graphml
docs/tex/: lib.bib  main.blg  main.run.xml  main.tex  preambula.tex
docs/tex/parts/: 1-analytic_part.tex  2-design_part.tex  3-tech_part.tex  4-experimental_part.tex  appendix.tex  biblio.tex  conclusion.tex  intro.tex  listings.tex  title.tex
