[package]
name = "code"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = ["glow"] }
image = "0.25.6"
nalgebra = "0.34.0"
imageproc = "0.25.0"
delaunator = "1.0.2"
itertools = "0.14.0"
rfd = "0.15.4"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "morph_benchmark"
harness = false